--- a/src/app/search-view/search-view.component.html
+++ b/src/app/search-view/search-view.component.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col-sm-12">
         <app-tv-show-table
-          [tvShows]="tvShows()"
+          [tvShowsPage]="tvShowsPage()"
         ></app-tv-show-table>
       </div>
   </div>
