--- a/src/app/tv-show-table/tv-show-table.component.html
+++ b/src/app/tv-show-table/tv-show-table.component.html
@@ -25,7 +25,7 @@
   </tbody>
   <thead>
     <tr>
-      <th colspan="4">Page 1 of 10</th>
+      <th colspan="4">{{tvShowsPageState().currentPage}} of {{tvShowsPageState().totalPages}}</th>
     </tr>
   </thead>
 </table>
