--- a/src/app/pages/search-page/search-page.component.html
+++ b/src/app/pages/search-page/search-page.component.html
@@ -1,4 +1,18 @@
-<app-search-view
-  [searchTerm]="searchTerm()"
-  (searchTermChange)="handleSearchTermChange($event)"
-></app-search-view>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <app-search-view
+        [searchTerm]="searchTerm()"
+        (searchTermChange)="handleSearchTermChange($event)"
+      ></app-search-view>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <app-tv-show-table
+        [tvShowFilter]="searchTerm()"
+        [tvShowsPage]="tvShowsPage()"
+      ></app-tv-show-table>
+    </div>
+  </div>
+</div>
