--- a/src/app/pages/search-page/search-page.component.html
+++ b/src/app/pages/search-page/search-page.component.html
@@ -10,8 +10,8 @@
   <div class="row">
     <div class="col-sm-12">
       <app-tv-show-table
-        [tvShowFilter]="searchTerm()"
         [tvShowsPage]="tvShowsPage()"
+        (nextClicked)="handleNextClick()"
       ></app-tv-show-table>
     </div>
   </div>
