add favorites page with paging

--- a/src/app/tv-show-table/tv-show-table.component.html
+++ b/src/app/tv-show-table/tv-show-table.component.html
@@ -17,7 +17,10 @@
         <td data-label="Status">{{ show.status }}</td>
         <td data-label="Actions">
           <span class="icon-info"></span>
-          <span class="icon-bookmark"></span>
+          <span class="icon-bookmark"
+            [class.highlight]="favoritesService.isFavorite(show.id)"
+            (click)="toggleFavorite(show)"
+          ></span>
           <span class="icon-link"></span>
         </td>
       </tr>
