add sorting and air date

--- a/src/app/views/favorites-card/favorites-card.component.html
+++ b/src/app/views/favorites-card/favorites-card.component.html
@@ -5,9 +5,13 @@
   </mat-card-header>
   <img mat-card-image src={{tvShowDetail().image_path}} alt="Image">
   <mat-card-content>
-    <p>
-      This is some content inside a card.
-    </p>
+    @if (tvShowDetail().countdown) {
+      <p>
+        Next episode: {{tvShowDetail().countdown?.air_date | date}}.
+      </p>
+    } @else {
+      <p>No next episode.</p>
+    }
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>LIKE</button>
