--- a/src/app/favorites-view/favorites-view.component.html
+++ b/src/app/favorites-view/favorites-view.component.html
@@ -1,10 +1,12 @@
 <!-- <p>start of {{favoritesDetailList().length}} favorites details</p> -->
-<div class="card-grid">
-  @for ( detail of favoritesDetailList(); track detail.id ) {
-    <!-- <p>Building Details: {{detail.name}}</p> -->
-    <app-favorites-card
-      [tvShowDetail]="detail"
-    ></app-favorites-card>
-  }
+<div class="outer-container">
+  <div class="card-grid">
+    @for ( detail of favoritesDetailList(); track detail.id ) {
+      <!-- <p>Building Details: {{detail.name}}</p> -->
+      <app-favorites-card
+        [tvShowDetail]="detail"
+      ></app-favorites-card>
+    }
+  </div>
 </div>
 
