--- a/src/app/views/favorites-card/favorites-card.component.html
+++ b/src/app/views/favorites-card/favorites-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card">
   <mat-card-header>
     <mat-card-title>{{tvShowDetail().name}}</mat-card-title>
-    <mat-card-subtitle>Card Subtitle</mat-card-subtitle>
+    <mat-card-subtitle>{{tvShowDetail() | countdown}}</mat-card-subtitle>
   </mat-card-header>
   <div class="image-container">
     <img mat-card-image src={{tvShowDetail().image_path}} alt="Image">
