--- a/src/app/tv-show-table/tv-show-table.component.html
+++ b/src/app/tv-show-table/tv-show-table.component.html
@@ -19,9 +19,8 @@
           <span class="icon-info"
             (click)="navigateToShowDetail(show.id)"
           ></span>
-          <span class="icon-bookmark"
+          <span class="icon-bookmark" appToggleFavorite [show]="show"
             [class.highlight]="favoritesService.isFavorite(show.id)"
-            (click)="toggleFavorite(show)"
           ></span>
           <span class="icon-link"></span>
         </td>
