--- a/src/app/tv-show-table/tv-show-table.component.html
+++ b/src/app/tv-show-table/tv-show-table.component.html
@@ -21,7 +21,7 @@
           ></span>
           <span
             class="icon-bookmark"
-            appToggleFavorite [show]="show"
+            appToggleFavorite [showId]="show.id"
           ></span>
           <span class="icon-link"></span>
         </td>
